show collapsed suggestions/corrections in mobile

--- a/searx/static/themes/oscar/css/logicodev-dark.css
+++ b/searx/static/themes/oscar/css/logicodev-dark.css
@@ -292,6 +292,9 @@ input[type=checkbox]:not(:checked) + .label_hide_if_checked + .label_hide_if_not
 .details-summary-fix {
   display: list-item;
 }
+.suggestions-xs {
+  margin-top: 1em;
+}
 .infobox .panel-heading {
   background-color: #f6f9fa;
 }
