--- a/searx/static/themes/oscar/css/pointhi.css
+++ b/searx/static/themes/oscar/css/pointhi.css
@@ -159,6 +159,9 @@ input[type=checkbox]:not(:checked) + .label_hide_if_checked + .label_hide_if_not
 .details-summary-fix {
   display: list-item;
 }
+.suggestions-xs {
+  margin-top: 1em;
+}
 .infobox img {
   max-height: 250px;
 }
