--- a/searx/static/themes/oscar/less/logicodev/results.less
+++ b/searx/static/themes/oscar/less/logicodev/results.less
@@ -196,3 +196,7 @@
 .details-summary-fix {
     display: list-item;
 }
+
+.suggestions-xs {
+    margin-top: 1em;
+}
