--- a/searx/static/themes/oscar/less/pointhi/results.less
+++ b/searx/static/themes/oscar/less/pointhi/results.less
@@ -112,3 +112,7 @@
 .details-summary-fix {
     display: list-item;
 }
+
+.suggestions-xs {
+    margin-top: 1em;
+}
